# toyim

./: .gitignore  CMakeLists.txt  README.md  nginx.conf
doc/: misc
src/: CMakeLists.txt  client.cc  server.cc  server.h  toyim.proto
src/hiredis/: CMakeLists.txt  redis.cc  redis.h
src/mysqlclient/: CMakeLists.txt  connection.cc  connection.h  connection_pool.cc  connection_pool.h
src/mysqlclient/tests/: CMakeLists.txt  connection_pool_test.cc  connection_test.cc
src/orm/: CMakeLists.txt  friend_model.cc  friend_model.h  group.h  group_model.cc  group_model.h  group_user.h  offline_message_model.cc  offline_message_model.h  user.h  user_model.cc  user_model.h
src/orm/tests/: CMakeLists.txt  friend_model_test.cc  group_model_test.cc  offline_message_model_test.cc  user_model_test.cc
src/protobuf/: CMakeLists.txt  codec.cc  codec.h  dispatcher.h
src/protobuf/tests/: CMakeLists.txt  client.cc  codec_test.cc  server.cc  test.proto
src/tests/: CMakeLists.txt  groupchat_loadtest.cc  login_loadtest.cc
